# testing_itmo

./: README.md  pytest.ini
final_task/bookstore_assignment_py/: .gitignore  README.md  cosmic-ray.toml  pyproject.toml  requirements.txt  run_demo.py
final_task/bookstore_assignment_py/docs/: ASSIGNMENT.md  REQUIREMENTS.md
final_task/bookstore_assignment_py/src/bookstore/: __init__.py  api.py  exceptions.py  order_service.py  pricing.py  recommendations.py
final_task/bookstore_assignment_py/src/bookstore/interfaces/: __init__.py  book_repository.py  clock.py  currency_converter.py  inventory_service.py  ml_recommendation_provider.py  notification_service.py  payment_gateway.py
final_task/bookstore_assignment_py/src/bookstore/models/: __init__.py  address.py  book.py  cart_item.py  customer.py  order.py
final_task/bookstore_assignment_py/tests/: README.md  bug_report.md  conftest.py  mutation_report.md
final_task/bookstore_assignment_py/tests/api/: test_api.py
final_task/bookstore_assignment_py/tests/mocks/: test_order_service_checkout.py
final_task/bookstore_assignment_py/tests/property/: test_pricing_properties.py
final_task/bookstore_assignment_py/tests/unit/: test_pricing.py
practice1/: .coverage  pyproject.toml  requirements-test.txt
practice1/src/: cart.py  shipping.py  shipping_edt.py
practice1/student_tasks/: exercise_3_library.py  homework_cart.py
practice1/tests/unit/: test_grading.py  test_grading_parametrized.py  test_library_books.py
src/: discount.py  grading.py  library.py
student_tasks/: exercise_1_grading.py  (+1 more)
(+41 files in other folders)
